# FnEditor

./: .gitignore  README.md  program-head  program-head.rs  test.txt
FnEditor/: .gitignore  Cargo.toml
FnEditor/assets/: styles.css
FnEditor/src/: app.rs  main.rs
FnEditor/src-tauri/: Cargo.toml  tauri.conf.json
FnEditor/src-tauri/src/: main.rs
fneditor/: Cargo.toml  Dioxus.toml
fneditor/assets/: main.css  styles.css
fneditor/src/: main.rs
fneditor/src-tauri/: Cargo.toml  tauri.conf.json
local-backend/: Cargo.toml
local-backend/src/: main.rs
src/: main.rs
