[package]
name = "FnEditor"
version = "0.1.0"
edition = "2021"

[dependencies]
freetype-rs = "0.37.0"
laststraw = "0.1.9"
#laststraw = { path = "/Users/hadrian/Developer/github_repos/laststraw/" }
#laststraw-core = { path = "/Users/hadrian/Developer/github_repos/laststraw/packages/core" } # locally update to test changes
minifb = "0.27.0"
quote = "1.0.38"
rfd = "0.15.2"
rusttype = "0.9.3"
syn = { version = "2.0.92", features = ["full"] }
